--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="../Css externo/estilo.css">
 </head>
 <body>
-    
+    <div id="cabecalho"></div>
+
+    <div id="corpo">
+        <div class="entrevistas"></div>
+        <div class="meio"></div>
+        <div class="meio"></div>
+
+        <div class="entrevistas1"></div>
+        <div class="meio2"></div>
+        <div class="meio3"></div>
+    </div>
 </body>
 </html>
