--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cidade-Noticias</title>
     <link rel="stylesheet" href="../Css externo/estilo.css">
 </head>
+
 <body>
     <div id="cabecalho"></div>
 
     <div id="corpo">
-        <div class="entrevistas"></div>
-        <div class="meio"></div>
-        <div class="meio"></div>
 
-        <div class="entrevistas1"></div>
-        <div class="meio2"></div>
-        <div class="meio3"></div>
+        <div class="entrevistas">
+            <a href="" class="titulos">Entrevistas</a>
+
+        </div>
+
+        <div id="meio">
+            <a href="" class="ultima">Ultimas Entrevistas</a>
+        </div>
+       
+        <div id="meio">
+            <a href="" class="destaque">Destaque</a>
+        </div>
+
+        <div class="entrevistas1"><a href="" class="news">News</a>
+        </div>
+
+        <div class="meio2"><a href="" class="mundo">Mundo</a>
+        </div>
+
+        <div class="meio3"><a href="" class="noticias_recentes">Noticias Recentes</a></div>
+
     </div>
 </body>
+
 </html>
