--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -9,30 +9,86 @@
 </head>
 
 <body>
-    <div id="cabecalho"></div>
+    <div id="cabecalho">
+        <div id="navegação_vertical">
+            <ul>
+                <li><a href="" id="espaço2">Home</a></li>
+                <li><a href="">Brasil</a></li>
+                <li><a href="">Internacional</a></li>
+                <li><a href="">Economia</a></li>
+                <li><a href="">Saúde</a></li>
+                <li><a href="">Ciência</a></li>
+                <li><a href="">Fotos</a></li>
+            </ul>
+        </div>
+    </div>
 
     <div id="corpo">
 
         <div class="entrevistas">
             <a href="" class="titulos">Entrevistas</a>
-
+            <div id="lista_1">
+                <ul>
+                    <li id="espaço"><a href="">José Almeida</a></li>
+                    <li><a href="">Felipe Silva</a></li>
+                    <li><a href="">Renato Rodrigues</a></li>
+                    <li><a href="">Albelardo Silveira</a></li>
+                    <li><a href="">Andre Carlos</a></li>
+                    <li><a href="">Marcio Mello</a></li>
+                    <li><a href="">João Pedro</a></li>
+                    <li><a href="">Fernando Weiss</a></li>
+                </ul>
+            </div>
         </div>
 
         <div id="meio">
-            <a href="" class="ultima">Ultimas Entrevistas</a>
+            <a href="" class="link_meio">Ultimas Entrevistas</a>
+
+            <div id="conteudo_meio">
+
+            </div>
         </div>
-       
+
         <div id="meio">
-            <a href="" class="destaque">Destaque</a>
+            <a href="" class="link_meio">Destaque</a>
+
+            <div id="conteudo_meio">
+
+            </div>
         </div>
 
-        <div class="entrevistas1"><a href="" class="news">News</a>
+        <div class="entrevistas1">
+            <a href="" class="link_meio">News</a>
+
+            <div id="lista_2">
+                <ul>
+                    <li id="espaço"><a href="" >José Almeida</a></li>
+                    <li><a href="">Felipe Silva</a></li>
+                    <li><a href="">Renato Rodrigues</a></li>
+                    <li><a href="">Albelardo Silveira</a></li>
+                    <li><a href="">Andre Carlos</a></li>
+                    <li><a href="">Marcio Mello</a></li>
+                    <li><a href="">João Pedro</a></li>
+                    <li><a href="">Fernando Weiss</a></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="meio2"><a href="" class="mundo">Mundo</a>
+        <div class="meio2">
+            <a href="" class="link_meio">Mundo</a>
+
+            <div id="conteudo_meio">
+
+            </div>
         </div>
 
-        <div class="meio3"><a href="" class="noticias_recentes">Noticias Recentes</a></div>
+        <div class="meio3">
+            <a href="" class="link_meio">Noticias Recentes</a>
+
+            <div id="conteudo_meio">
+
+            </div>
+        </div>
 
     </div>
 </body>
