BARRA DE NAVEGAÇÃO
feita a barra de navegação (:

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
+    
     <div id="cabecalho">
         <div id="navegação_vertical">
             <ul>
-                <li><a href="" id="espaço2">Home</a></li>
-                <li><a href="">Brasil</a></li>
+                <li id="espaço3"><a href="">Home</a></li>
+                <li id="center"><a href="">Brasil</a></li>
                 <li><a href="">Internacional</a></li>
                 <li><a href="">Economia</a></li>
-                <li><a href="">Saúde</a></li>
-                <li><a href="">Ciência</a></li>
+                <li><a href="">Saude</a></li>
+                <li><a href="">Ciencia</a></li>
                 <li><a href="">Fotos</a></li>
             </ul>
         </div>
@@ -62,7 +63,7 @@
 
             <div id="lista_2">
                 <ul>
-                    <li id="espaço"><a href="" >José Almeida</a></li>
+                    <li id="espaço"><a href="">José Almeida</a></li>
                     <li><a href="">Felipe Silva</a></li>
                     <li><a href="">Renato Rodrigues</a></li>
                     <li><a href="">Albelardo Silveira</a></li>
