--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -11,6 +11,14 @@
 <body>
 
     <div id="cabecalho">
+        <div>
+            <img src="../Imagens/detalhe-topo.png" id="img_1">
+        </div>
+
+        <div>
+            <img src="../Imagens/logo.png" id="img_2">
+        </div>
+
         <div id="navegação_vertical">
             <ul>
                 <li id="espaço3">
