--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -83,20 +83,65 @@
     <div id="corpo">
 
         <div class="entrevistas">
-            <a href="" class="titulos">Entrevistas</a>
+
+            <a href="" class="titulos"><h3>Entrevistas</h3>
+            
+            <img src="../Imagens/entrevistas_icon.jpg" id="entrevistas_icon">
+            </a>
+
             <div id="lista_1">
                 <ul>
-                    <li id="espaço"><a href="">José Almeida</a></li>
-                    <li><a href="">Felipe Silva</a></li>
-                    <li><a href="">Renato Rodrigues</a></li>
-                    <li><a href="">Albelardo Silveira</a></li>
-                    <li><a href="">Andre Carlos</a></li>
-                    <li><a href="">Marcio Mello</a></li>
-                    <li><a href="">João Pedro</a></li>
-                    <li><a href="">Fernando Weiss</a></li>
+                    <li id="espaço">
+                        <a href="">José Almeida
+                            <img src="../Imagens/user_icon.png" id="user_icon">
+                        </a>
+                    </li>
+
+                    <li id="">
+                        <a href="">Felipe Silva
+                            <img src="../Imagens/user_icon.png" id="user_icon1">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">Renato Rodrigues
+                            <img src="../Imagens/user_icon.png" id="user_icon2">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">Albelardo Silveira
+                            <img src="../Imagens/user_icon.png" id="user_icon3">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">Andre Carlos
+                            <img src="../Imagens/user_icon.png" id="user_icon4">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">Marcio Mello
+                            <img src="../Imagens/user_icon.png" id="user_icon4">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">João Pedro
+                            <img src="../Imagens/user_icon.png" id="user_icon5">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">Fernando Weiss
+                            <img src="../Imagens/user_icon.png" id="user_icon6">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
+
 
         <div id="meio">
             <a href="" class="link_meio">Ultimas Entrevistas</a>
