--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -144,18 +144,47 @@
 
 
         <div id="meio">
-            <a href="" class="link_meio">Ultimas Entrevistas</a>
+            <a href="" class="link_meio"><h3>Ultimas Entrevistas</h3>
+            </a>
 
             <div id="conteudo_meio">
+                <div id="titulo_meio">
+                    <p>Entrevista com Pedro </p>
+                </div>
 
+                <div>
+                    <img src="../Imagens/doutor.jpg" id="size">
+                </div>
+
+                <div id="texto">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam unde 
+                </div>
+
+                <div>
+                    <a href="" id="texto1">Leia mais...</a>
+                </div>
             </div>
         </div>
 
         <div id="meio">
-            <a href="" class="link_meio">Destaque</a>
+            <a href="" class="link_meio"><h3>Destaque</h3></a>
 
             <div id="conteudo_meio">
+                <div id="titulo_meio">
+                    <p>Vida de Pedro</p>
+                </div>
 
+                <div>
+                    <img src="../Imagens/discord.png" id="size">
+                </div>
+
+                <div id="texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem molestiae consectetur a ab, tempora delectus 
+                </div>
+
+                <div>
+                    <a href="" id="texto1">Leia mais...</a>
+                </div>
             </div>
         </div>
 
@@ -177,19 +206,13 @@
         </div>
 
         <div class="meio2">
-            <a href="" class="link_meio">Mundo</a>
+            <a href="" class="link_meio"><h3>Mundo</h3></a>
 
-            <div id="conteudo_meio">
-
-            </div>
         </div>
 
         <div class="meio3">
-            <a href="" class="link_meio">Noticias Recentes</a>
+            <a href="" class="link_meio"><h3>Noticias Recentes</h3></a>
 
-            <div id="conteudo_meio">
-
-            </div>
         </div>
 
     </div>
