--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -149,7 +149,7 @@
 
             <div id="conteudo_meio">
                 <div id="titulo_meio">
-                    <p>Entrevista com Pedro </p>
+                    <p>Entrevista com Felipe Silva </p>
                 </div>
 
                 <div>
@@ -171,15 +171,15 @@
 
             <div id="conteudo_meio">
                 <div id="titulo_meio">
-                    <p>Vida de Pedro</p>
+                    <p>Nova Legislação</p>
                 </div>
 
                 <div>
-                    <img src="../Imagens/discord.png" id="size">
+                    <img src="../Imagens/taxi.jpg" id="size">
                 </div>
 
                 <div id="texto">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem molestiae consectetur a ab, tempora delectus 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem molestiae consectetur 
                 </div>
 
                 <div>
@@ -208,10 +208,125 @@
         <div class="meio2">
             <a href="" class="link_meio"><h3>Mundo</h3></a>
 
+            <div id="noticias">
+                <div id="noticia_1">
+                    <img src="../Imagens/franca-reuters.jpg">
+
+                    <a href="" id="texto1"><h5>Crise Europeia</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+
+                <div id="noticia_2">
+                    <img src="../Imagens/xi-jinping2.jpg">
+
+                    <a href="" id="texto1"><h5> Declaração da China</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+
+                <div id="noticia_2">
+                    <img src="../Imagens/reuniao-dos-brics.jpg">
+
+                    <a href="" id="texto1"><h5> Dilma no BRICS</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+
+                <div id="noticia_2">
+                    <img src="../Imagens/cropped-Joe-Biden.jpg">
+
+                    <a href="" id="texto1"><h5> USA na Guerra</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+            </div>
         </div>
 
         <div class="meio3">
             <a href="" class="link_meio"><h3>Noticias Recentes</h3></a>
+
+            <div id="noticias">
+                <div id="noticia_1">
+                    <img src="../Imagens/lula2.jpg">
+
+                    <a href="" id="texto1"><h5>Reunião de luxo</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <div id="tempo">
+                        <img src="../Imagens/relogio.png" > Há 15 Min
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+
+                <div id="noticia_2">
+                    <img src="../Imagens/haddad.jpg">
+
+                    <a href="" id="texto1"><h5> Reforma tributaria</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <div id="tempo">
+                        <img src="../Imagens/relogio.png" >  Há 30 Min
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+
+                <div id="noticia_2">
+                    <img src="../Imagens/alexandre_de_moraes_14.jpg">
+
+                    <a href="" id="texto1"><h5> Ministro é atacado</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <div id="tempo">
+                        <img src="../Imagens/relogio.png" > Há 1 hora
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+
+                <div id="noticia_2">
+                    <img src="../Imagens/acidente.jpg">
+
+                    <a href="" id="texto1"><h5>Acidente em Franca</h5></a>
+
+                    <div id="texto2">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                    </div>
+
+                    <div id="tempo">
+                       <img src="../Imagens/relogio.png" > Há 10 Min
+                    </div>
+
+                    <hr id="divisão">
+                </div>
+            </div>
 
         </div>
 
