--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -188,21 +188,12 @@
             </div>
         </div>
 
-        <div class="entrevistas1">
-            <a href="" class="link_meio">News</a>
+        <div class="entrevistas1" id="news_body">
+            <a href="" id="news"><h3>Para Mais...</h3></a>
 
-            <div id="lista_2">
-                <ul>
-                    <li id="espaço"><a href="">José Almeida</a></li>
-                    <li><a href="">Felipe Silva</a></li>
-                    <li><a href="">Renato Rodrigues</a></li>
-                    <li><a href="">Albelardo Silveira</a></li>
-                    <li><a href="">Andre Carlos</a></li>
-                    <li><a href="">Marcio Mello</a></li>
-                    <li><a href="">João Pedro</a></li>
-                    <li><a href="">Fernando Weiss</a></li>
-                </ul>
-            </div>
+            <input type="text" id="email" placeholder="Digite seu email...">
+
+            <div id="branco"></div>
         </div>
 
         <div class="meio2">
